COLLADA: added initial support for ymag and yfov in importer. fixes issue #32237